[gd_scene load_steps=2 format=2]

[ext_resource path="res://BNumberPropertySelector.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="InverseParserHBC" type="HBoxContainer" parent="Background"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1359.0
margin_bottom = 27.0

[node name="RootCharacterSelector" type="OptionButton" parent="Background/InverseParserHBC"]
margin_right = 29.0
margin_bottom = 20.0

[node name="NegateToggleButton" type="Button" parent="Background/InverseParserHBC"]
margin_left = 33.0
margin_right = 49.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 0 )

[node name="KeyringBC" type="HBoxContainer" parent="Background/InverseParserHBC"]
margin_left = 53.0
margin_right = 1352.0
margin_bottom = 20.0
size_flags_horizontal = 3

[connection signal="item_selected" from="Background/InverseParserHBC/RootCharacterSelector" to="." method="_on_RootCharacterSelector_item_selected"]
[connection signal="pressed" from="Background/InverseParserHBC/NegateToggleButton" to="." method="_on_NegateToggleButton_pressed"]
