[gd_scene load_steps=2 format=3 uid="uid://dbsyo01hjfm40"]

[ext_resource type="Script" path="res://interface/BNumberPropertySelector.gd" id="1"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="InverseParserHBC" type="HBoxContainer" parent="Background"]
layout_mode = 2

[node name="RootCharacterSelector" type="OptionButton" parent="Background/InverseParserHBC"]
layout_mode = 2

[node name="KeyringBC" type="HBoxContainer" parent="Background/InverseParserHBC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ErrorMessage" type="Label" parent="Background/InverseParserHBC"]
layout_mode = 2
mouse_filter = 1

[connection signal="item_selected" from="Background/InverseParserHBC/RootCharacterSelector" to="." method="_on_RootCharacterSelector_item_selected"]
